[gd_scene load_steps=4 format=2]

[ext_resource path="res://NoteValue.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="NoteValue" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="NoteBackRect" type="ColorRect" parent="."]
margin_right = 80.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="NoteRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 79.0
margin_bottom = 39.0
color = Color( 0.901961, 0.839216, 0.839216, 1 )

[node name="Line2D" type="Line2D" parent="."]

[node name="MeasureLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 79.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="OctaveLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 15.0
margin_right = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="NoteLabelPitch" type="Label" parent="."]
margin_left = 1.0
margin_top = 20.0
margin_right = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="NoteLabelTime" type="Label" parent="."]
margin_left = 40.0
margin_top = 20.0
margin_right = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[connection signal="mouse_entered" from="NoteRect" to="." method="_on_NoteRect_mouse_entered"]
[connection signal="mouse_exited" from="NoteRect" to="." method="_on_NoteRect_mouse_exited"]
